<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="247dp"
    android:layout_marginLeft="24dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="24dp"
    app:cardBackgroundColor="@color/light_background"
    app:cardCornerRadius="10dp"
    app:cardElevation="0dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.666"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/my_transaction_subtitle1"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/edit_transaction_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:text="@string/edit_transaction_title"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@color/white"
            android:ems="10"
            android:inputType="numberDecimal"
            android:paddingLeft="7dp"
            android:paddingTop="3dp"
            android:paddingRight="7dp"
            android:paddingBottom="3dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/add_transaction_income_amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/add_transaction_income_amount"
            app:layout_constraintTop_toTopOf="@+id/add_transaction_income_amount"
            app:layout_constraintVertical_bias="0.444" />

        <TextView
            android:id="@+id/add_transaction_income_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/edit_transaction_label"
            app:layout_constraintEnd_toStartOf="@+id/edit_amount"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_transaction_title" />

        <EditText
            android:id="@+id/edit_transaction_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/edit_transaction_category"
            android:inputType="textPersonName"
            android:paddingLeft="7dp"
            android:paddingTop="3dp"
            android:paddingRight="7dp"
            android:paddingBottom="3dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edit_category_label"
            app:layout_constraintTop_toBottomOf="@+id/edit_amount" />

        <TextView
            android:id="@+id/edit_category_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/edit_category_name"
            app:layout_constraintEnd_toStartOf="@+id/edit_transaction_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_amount" />

        <Button
            android:id="@+id/edit_income_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="10dp"
            android:text="@string/delete_income_btn"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_date" />

        <EditText
            android:id="@+id/edit_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@color/white"
            android:ems="10"
            android:inputType="datetime"
            android:padding="3dp"
            android:paddingLeft="7dp"
            android:paddingTop="3dp"
            android:paddingRight="7dp"
            android:paddingBottom="3dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/transaction_date_label"
            app:layout_constraintTop_toBottomOf="@+id/edit_transaction_category" />

        <TextView
            android:id="@+id/transaction_date_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="4dp"
            android:text="@string/transaction_date_label"
            app:layout_constraintEnd_toStartOf="@+id/edit_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_date" />

        <Button
            android:id="@+id/edit_income_btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/edit_income_btn2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/edit_income_btn"
            app:layout_constraintHorizontal_bias="0.728"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
